package edu.nust.engine.core.interfaces;

public interface Initiable
{
    void onInit();
}
